--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,13 @@ pylti
 oauthlib
 unidecode
 pymongo
+waitress==2.1.2
+werkzeug==2.3.7
+markdown2==2.4.10
+pygments==2.16.1
+python-markdown-math==0.8
+beautifulsoup4==4.12.2
+chevron==0.14.0
+matplotlib==3.7.2
+numpy==1.25.2
+sympy==1.12
